--- a/Nivel2-B/Documentos/Guia/guia.tex
+++ b/Nivel2-B/Documentos/Guia/guia.tex
@@ -9,7 +9,7 @@
 \author[**]{Francisco Nemiña\thanks{fnemina@conae.gov.ar}}
 \author[**]{Laura Rouco}
 
-\affil[*]{Productos SAOCOM \\ Comisión Nacional de Actividades Espaciales}
+\affil[*]{SAOCOM \\ Comisión Nacional de Actividades Espaciales}
 \affil[**]{Unidad de Educación y Formación Masiva \\ Comisión Nacional de Actividades Espaciales}
 
 \begin{document}
@@ -25,6 +25,7 @@
 \input{guia3.tex}
 \input{guia4.tex}
 \input{guia5.tex}
+
 \appendix
 \input{apendice1.tex}
 
