--- a/Nivel2-B/Documentos/Guia/guia1.tex
+++ b/Nivel2-B/Documentos/Guia/guia1.tex
@@ -1,7 +1,7 @@
 \chapter{Introducción al radar}
 
-El \emph{Sentinel Aplication Toolbox (SNAP)} es un  software de procesamiento de imágenes diseñado por la \emph{Agencia Espacial Europera (ESA)}, cuyas herramientas simplifican el trabajo con imágenes radar y ópticas.
-Esta clase tirno vomo objetivo familiarizarce con el entorno gráfico del programa.
+El \emph{Sentinel Aplication Toolbox (SNAP)} es un  software de procesamiento de imágenes diseñado por la \emph{Agencia Espacial Europea (ESA)}, cuyas herramientas simplifican el trabajo con imágenes radar y ópticas.
+Esta clase tiene como objetivo familiarizarce con el entorno gráfico del programa.
 
 \section{Sobre esta guía}
 
@@ -51,12 +51,12 @@ En esta cobertura encontramos
     \item \emph{Index Codings}: Los valores de referencia para interpretar los números digitales de la imagen.
     \item \emph{Vector data}: Las capas vectoriales asociadas a la imagen.
     \item \emph{Bands}: Las bandas de la imagen y las operaciones de álgebra entre bandas.
-    \item \emph{Masks}: Las máscaras que sean incluidas en la imagen.
+    \item \emph{Masks}: Las máscaras que sean incluídas en la imagen.
 \end{itemize}
 
 \section{Visualización}
 
-Para visualizar una de las bandas de la imagen haga doble click sobre el nombre y se mostrará en escala de grises (Figura \ref{fig:mono}). Es posible abrir varias bandas en simultaneo, cada una se mostrará en una pestaña nueva arriba del área de visualización. Explore la imagen utilizando las herramientas de navegación y zoom (Figura \ref{fig:NAV})
+Para visualizar una de las bandas de la imagen haga doble click sobre el nombre y se mostrará en escala de grises (Figura \ref{fig:mono}). Es posible abrir varias bandas en simultáneo, cada una se mostrará en una pestaña nueva arriba del área de visualización. Explore la imagen utilizando las herramientas de navegación y zoom (Figura \ref{fig:NAV})
 
 \begin{figure}[h!]
     \centering
@@ -70,7 +70,7 @@ Para visualizar una de las bandas de la imagen haga doble click sobre el nombre 
 \begin{figure}[h!]
     \centering
     \includegraphics[scale=0.5]{fig:NAV.png}
-    \caption{Herramientass de navegación. De izquierda a derecha: \menu{Selection tool}, para seleccionar objetos en la imagen, \menu{Panning tool}, para moverse dentro de la imagen, y \menu{Zooming tool}, para hacer zoom en la imagen.}
+    \caption{Herramientas de navegación. De izquierda a derecha: \menu{Selection tool}, para seleccionar objetos en la imagen, \menu{Panning tool}, para moverse dentro de la imagen, y \menu{Zooming tool}, para hacer zoom en la imagen.}
     \label{fig:NAV}
 \end{figure}
 
@@ -106,13 +106,13 @@ Allí encontrará la latitud y longitud, las coordenadas dentro del mapa y el va
 
 \section{Exportar pantalla}
 
-Es posible exportar la visualización de la imagen completa o de una región específica desde \menu{File>Export view}. Si selecciona \menu{View as KMZ} obtendrá un archivo \directory{.kmz} que luego podrá abrir desde Google Earth; o elegir \menu{View as image} generando archivos \directory{.GeoTiff} o \directory{.jpg} para visualizarlo en otro software. Para mantener la georreferencia debe optar por \emph{GeoTIFF - TIFF with geo-location} con la opción \emph{Full resolution}. De esta manera sse mantiene la resolucion original de la imagen.(Figura \ref{fig:export}).
+Es posible exportar la visualización de la imagen completa o de una región específica desde \menu{File>Export view}. Si selecciona \menu{View as KMZ} obtendrá un archivo \directory{.kmz} que luego podrá abrir desde Google Earth; o elegir \menu{View as image} generando archivos \directory{.GeoTiff} o \directory{.jpg} para visualizarlo en otro software. Para mantener la georreferencia debe optar por \emph{GeoTIFF - TIFF with geo-location} con la opción \emph{Full resolution}. De esta manera se mantiene la resolución original de la imagen.(Figura \ref{fig:export}).
 .
 
 \begin{figure}[h!]
     \centering
     \includegraphics[width=0.7\textwidth]{fig:export.png}
-    \caption{Menu de Export image. Incluye las opciones para elegir el recorte, la resolución y el tipo de dato de salida.}
+    \caption{Menú de \menu{Export image}. Incluye las opciones para elegir el recorte, la resolución y el tipo de dato de salida.}
     \label{fig:export}
 \end{figure}
 
