--- a/Nivel2-B/Documentos/Guia/guia3.tex
+++ b/Nivel2-B/Documentos/Guia/guia3.tex
@@ -4,7 +4,7 @@ Esta clase tiene como objetivo comprender los pasos básicos de preprocesamiento
 
 \section{Descarga de imágenes}
 
-Para descargar imágenes SAR utilizaremos el catálogo del \href{https://vertex.daac.asf.alaska.edu/}{Alaska Satellite Facility}. Diríjase a la página y en la sección de \emph{Geographic Region} seleccione un área que incluya a la ciudad de Ushuaia (Figura \ref{fig:region}).
+Para descargar imágenes SAR utilizaremos el catálogo del \href{https://vertex.daac.asf.alaska.edu/}{Alaska Satellite Facility}\footnote{\href{https://vertex.daac.asf.alaska.edu/}{https://vertex.daac.asf.alaska.edu/}}. Diríjase a la página y en la sección de \emph{Geographic Region} seleccione un área que incluya a la ciudad de Ushuaia (Figura \ref{fig:region}).
 
 \begin{figure}[h!]
     \centering
